<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_margin="10dp"
            android:layout_width="70sp"
            android:layout_height="70sp"/>
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F49A14"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_agree"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_reject"
            android:visibility="gone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/colorAccent"/>
</LinearLayout>