<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#339FF4"
        app:navigationIcon="@drawable/img_back_white"
        android:theme="@style/OverflowMenuStyle">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F7FAF9"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="20sp"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/layout_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="bottom">
        <EditText
            android:id="@+id/tv_send_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@drawable/login_edit_bg"
            android:textSize="22sp"
            android:hint="@string/talk_send_message_hint"
            android:inputType="text"
            android:autofillHints="" />
        <Button
            android:id="@+id/btn_send_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/login_btn_bg"
            android:text="@string/btn_send"/>
        <Button
            android:id="@+id/btn_send_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/login_btn_bg"
            android:text="@string/btn_send_img"/>
    </LinearLayout>
</LinearLayout>