package com.chrisjaunes.communication.client.group;

import androidx.test.core.app.ActivityScenario;

import com.chrisjaunes.communication.client.R;
import com.chrisjaunes.communication.client.account.LoginActivity;
import com.chrisjaunes.communication.client.contacts.RecycleViewMatcher;

import org.junit.Test;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.swipeDown;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

public class GroupMessageFragmentTest {
    @Test
    public void Test1() throws InterruptedException {
        ActivityScenario<LoginActivity> scenario = ActivityScenario.launch(LoginActivity.class);
        onView(withId(R.id.et_account)).perform(typeText("111"));
        onView(withId(R.id.et_password)).perform(typeText("111"));
        onView(withId(R.id.btn_login)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.radio_button_chatgroup)).perform(click());
        Thread.sleep(100);
        onView(new RecycleViewMatcher(R.id.rv_group).atPosition(2)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.layout_swipe_refresh)).perform(swipeDown());
        Thread.sleep(100);
        onView(withId(R.id.tv_send_text)).perform(typeText("UI espresso test"));
        onView(withId(R.id.btn_send_text)).perform(click());
        Thread.sleep(100);
    }
    @Test
    public void Test2() throws InterruptedException {
        ActivityScenario<LoginActivity> scenario = ActivityScenario.launch(LoginActivity.class);
        onView(withId(R.id.et_account)).perform(typeText("444"));
        onView(withId(R.id.et_password)).perform(typeText("444"));
        onView(withId(R.id.btn_login)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.radio_button_chatgroup)).perform(click());
        Thread.sleep(100);
        onView(new RecycleViewMatcher(R.id.rv_group).atPosition(1)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.layout_swipe_refresh)).perform(swipeDown());
        Thread.sleep(1000);
        onView(withId(R.id.tv_send_text)).perform(typeText("UI espresso test 2"));
        onView(withId(R.id.btn_send_text)).perform(click());
        Thread.sleep(100);
    }
    @Test
    public void Test3() throws InterruptedException {
        ActivityScenario<LoginActivity> scenario = ActivityScenario.launch(LoginActivity.class);
        onView(withId(R.id.et_account)).perform(typeText("555"));
        onView(withId(R.id.et_password)).perform(typeText("555"));
        onView(withId(R.id.btn_login)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.radio_button_chatgroup)).perform(click());
        Thread.sleep(100);
        onView(new RecycleViewMatcher(R.id.rv_group).atPosition(1)).perform(click());
        Thread.sleep(100);
        onView(withId(R.id.layout_swipe_refresh)).perform(swipeDown());
        Thread.sleep(1000);
        onView(withId(R.id.tv_send_text)).perform(typeText("UI espresso test 3"));
        onView(withId(R.id.btn_send_text)).perform(click());
        Thread.sleep(100);
    }
}